[workspace]

members = [
  "test/env",
  "test/env/state-machine",
  "test/env/replica",
  "test/suite",
  "test/runner",
  "test/replica",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.71"
candid = "0.8"
hex = "0.4.3"
ic-agent = "0.24.0"
reqwest = "0.11"
ic-test-state-machine-client = "2.2.1"
rand = "0.8.5"
ring = "0.16.20"
serde = "=1.0.171"
tempfile = "3.3"
tokio = { version = "1.20.1", features = ["macros"] }

[workspace.package]
authors = ["DFINITY Stiftung"]
edition = "2018"
repository = "https://github.com/dfinity/ICRC-1"
rust-version = "1.31.0"
license = "Apache-2.0"
