load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive","http_file")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")
load("//bazel:didc_repo.bzl", "didc_repository")

http_archive(
    name = "rules_motoko",
    sha256 = "9b677fc5d3b42749d13b7734b3a87d4d40135499a189e843ae3f183965e255b7",
    strip_prefix = "rules_motoko-0.1.0",
    urls = ["https://github.com/dfinity/rules_motoko/archive/refs/tags/v0.1.0.zip"],
)

http_archive(
    name = "motoko_base",
    build_file_content = """
filegroup(name = "sources", srcs = glob(["*.mo"]), visibility = ["//visibility:public"])
      """,
    sha256 = "582d1c90faa65047354ae7530f09160dd7e04882991287ced7ea7a72bd89d06e",
    strip_prefix = "motoko-base-moc-0.6.24/src",
    urls = ["https://github.com/dfinity/motoko-base/archive/refs/tags/moc-0.6.24.zip"],
)

load("@rules_motoko//motoko:repositories.bzl", "rules_motoko_dependencies")

rules_motoko_dependencies()

http_archive(
    name = "io_bazel_rules_go",
    sha256 = "16e9fca53ed6bd4ff4ad76facc9b7b651a89db1689a2877d6fd7b82aa824e366",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.34.0/rules_go-v0.34.0.zip",
        "https://github.com/bazelbuild/rules_go/releases/download/v0.34.0/rules_go-v0.34.0.zip",
    ],
)

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

go_rules_dependencies()

go_register_toolchains(version = "1.18.4")

new_git_repository(
    name = "lmt",
    build_file_content = """
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "lmt",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
)
    """,
    commit = "62fe18f2f6a6e11c158ff2b2209e1082a4fcd59c",
    remote = "https://github.com/driusan/lmt",
    shallow_since = "1619009341 -0400",
)

didc_repository(name = "didc")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_rust",
    sha256 = "aaaa4b9591a5dad8d8907ae2dbe6e0eb49e6314946ce4c7149241648e56a1277",
    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.16.1/rules_rust-v0.16.1.tar.gz"],
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    edition = "2021",
    versions = ["1.66.1"],
)

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies()

load("@rules_rust//crate_universe:defs.bzl", "crates_repository")

crates_repository(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
    lockfile = "//:Cargo.Bazel.lock",
    manifests = [
        "//:Cargo.toml",
        "//test/env:Cargo.toml",
        "//test/suite:Cargo.toml",
        "//test/runner:Cargo.toml",
        "//test/replica:Cargo.toml",
    ],
)

load("@crate_index//:defs.bzl", "crate_repositories")

crate_repositories()

load("//bazel:replica_tools.bzl", "replica_tools_repository")

replica_tools_repository(name = "replica_tools")

http_file(
    name = "ic-test-state-machine",
    downloaded_file_path = "ic-test-state-machine.gz",
    urls = ["https://download.dfinity.systems/ic/2857a39ea4d991b2d5c8307623e00a5360eae84c/binaries/x86_64-linux/ic-test-state-machine.gz"],
    sha256 = "213369060b47ac5fd6318e5a1fa3101b846d1baad2cd194ac486fa9979dfba1d",
)
