load("@rules_motoko//motoko:defs.bzl", "motoko_binary", "motoko_library", "motoko_test")
load("//bazel:didc_test.bzl", "didc_subtype_test", "motoko_actor_did_file")

motoko_library(
    name = "base",
    srcs = ["@motoko_base//:sources"],
)

motoko_library(
    name = "account",
    srcs = ["Account.mo"],
    deps = [":base"],
)

motoko_test(
    name = "account_test",
    entry = "AccountTest.mo",
    deps = [
        ":account",
        ":base",
    ],
)

motoko_binary(
    name = "icrc1_ref",
    entry = "ICRC1.mo",
    visibility = ["//visibility:public"],
    deps = [":base"],
)

motoko_actor_did_file(
    name = "icrc1_ref_did",
    actor = ":icrc1_ref",
)

didc_subtype_test(
    name = "icrc1_ref_candid_check",
    did = ":icrc1_ref_did",
    previous = "//standards/ICRC-1:ICRC-1.did",
)

didc_subtype_test(
    name = "icrc2_ref_candid_check",
    did = ":icrc1_ref_did",
    previous = "//standards/ICRC-2:ICRC-2.did",
)
