[package]
name = "icrc1-test-env"
version = "0.2.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
