[package]
name = "icrc1-test-replica"
version = "0.1.1"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
ic-agent = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }