load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

exports_files(["Cargo.toml"])

rust_binary(
    name = "runner",
    srcs = ["main.rs"],
    crate_name = "icrc1_test_runner",
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//test/env",
        "//test/suite",
        "@crate_index//:candid",
    ],
)
