[package]
name = "icrc1-test-runner"
edition = "2018"
version = "0.1.0"

[[bin]]
name = "runner"
path = "main.rs"

[dependencies]
icrc1-test-env = { path = "../env" }
icrc1-test-env-replica = { path = "../env/replica" }
icrc1-test-suite = { path = "../suite" }
ic-agent = { workspace = true }
pico-args = "0.5"
reqwest = { workspace = true }
tokio = { workspace = true }
candid = { workspace = true }
anyhow = { workspace = true }