[package]
name = "icrc1-test-suite"
version = "0.2.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0"
candid = { workspace = true }
futures = "0.3.24"
icrc1-test-env = { version = "0.2.0", path = "../env" }
