[package]
name = "icrc1-test-env-replica"
version = "0.1.2"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
ic-agent = { workspace = true }
rand = { workspace = true }
ring = "0.16.20"
hex = { workspace = true }
async-trait = { workspace = true }
icrc1-test-env = { version = "0.1.2", path = "../" }
