[package]
name = "icrc1-test-env-state-machine"
version = "0.1.1"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
ic-test-state-machine-client = { workspace = true }
icrc1-test-env = { version = "0.1.1", path = "../" }